<resources>
    <string name="app_name">QuizApp</string>
    <string name="sets">Sets</string>
    <string name="title">Title</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="share">Share</string>
    <string name="score">Score</string>
    <string name="banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitialAd_id">ca-app-pub-3940256099942544/1033173712</string>
</resources>
