...
        android:background="@drawable/gradient"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toTopOf="@+id/start_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
...
        android:layout_marginBottom="32dp"
        android:text="@string/start_quiz"
        android:textStyle="bold"
        android:stateListAnimator="@null"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_corners"
        app:layout_constraintBottom_toTopOf="@+id/bookmarks_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bookmarks_btn"
        android:layout_width="150dp"
...
